--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -4,7 +4,7 @@
 #container_login{
   width: 100%;
   height: 800px;
-  background-image: url('http://crossfitalpha1athlete.com/wp-content/uploads/2014/04/gabriel-grobben-crossfit-13.jpg');
+  background-image: url('https://crossfitalpha1athlete.com/wp-content/uploads/2014/04/gabriel-grobben-crossfit-13.jpg');
   background-repeat: no-repeat;
   background-size: 100%;
   padding-top: 50px;
@@ -30,7 +30,7 @@
 #container_leaderboard{
   width: 100%;
   height: 800px;
-  background-image: url('http://crossfitperpetualondon.com/wp-content/uploads/2014/09/think-RF.jpg');
+  background-image: url('https://crossfitperpetualondon.com/wp-content/uploads/2014/09/think-RF.jpg');
   background-repeat: no-repeat;
   background-size: 100%;
   padding-top: 50px;
@@ -61,7 +61,7 @@
 #container_user{
   width: 100%;
   height: 800px;
-  background-image: url("http://vivendilab.com/wp-content/uploads/2014/05/bailey.jpg");
+  background-image: url("https://vivendilab.com/wp-content/uploads/2014/05/bailey.jpg");
   background-size: 100%;
   background-repeat: no-repeat;
 }
@@ -77,7 +77,7 @@
 #container_wod{
   width: 100%;
   height: 800px;
-  background-image: url("http://blog.girlswhodocrossfit.com/wp-content/uploads/2014/12/lauren-fisher-crossfit-7.jpg");
+  background-image: url("https://blog.girlswhodocrossfit.com/wp-content/uploads/2014/12/lauren-fisher-crossfit-7.jpg");
   background-size: 100%;
   background-repeat: no-repeat;
 }
